// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Dropdown/demo/basic.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center dropdown-demo"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Hover me 
      </span>
      <svg
        class="arco-icon arco-icon-down"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M39.6 17.443 24.043 33 8.487 17.443"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <span
      style="display:inline-block;cursor:not-allowed"
    >
      <button
        class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
        disabled=""
        style="pointer-events:none"
        type="button"
      >
        <span>
          Hover me 
        </span>
        <svg
          class="arco-icon arco-icon-down"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`renders Dropdown/demo/callback.md correctly 1`] = `
<div
  class="dropdown-demo"
>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Hover me and click an item 
    </span>
    <svg
      class="arco-icon arco-icon-down"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M39.6 17.443 24.043 33 8.487 17.443"
      />
    </svg>
  </button>
</div>
`;

exports[`renders Dropdown/demo/control.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center dropdown-demo"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Click
      </span>
      <svg
        class="arco-icon arco-icon-down"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M39.6 17.443 24.043 33 8.487 17.443"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Click
      </span>
      <svg
        class="arco-icon arco-icon-down"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M39.6 17.443 24.043 33 8.487 17.443"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`renders Dropdown/demo/dropdown-button.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center dropdown-demo"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-btn-group"
    >
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
        type="button"
      >
        <span>
          Publish
        </span>
      </button>
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
        type="button"
      >
        <svg
          class="arco-icon arco-icon-more"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-btn-group"
    >
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-disabled"
        disabled=""
        type="button"
      >
        <span>
          Disabled
        </span>
      </button>
      <button
        class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
        type="button"
      >
        <svg
          class="arco-icon arco-icon-more"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
            fill="currentColor"
            stroke="none"
          />
          <path
            d="M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <div
      class="arco-btn-group"
    >
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
        type="button"
      >
        <span>
          Publish
        </span>
      </button>
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-icon-only"
        type="button"
      >
        <svg
          class="arco-icon arco-icon-down"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-btn-group"
    >
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
        type="button"
      >
        <span>
          With Tooltip
        </span>
      </button>
      <button
        class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-loading arco-btn-icon-only"
        type="button"
      >
        <svg
          class="arco-icon arco-icon-loading"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
          width="1em"
        >
          <path
            d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders Dropdown/demo/extra-element.md correctly 1`] = `
<div
  class="dropdown-demo"
>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Hover
    </span>
    <svg
      class="arco-icon arco-icon-down"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M39.6 17.443 24.043 33 8.487 17.443"
      />
    </svg>
  </button>
</div>
`;

exports[`renders Dropdown/demo/group.md correctly 1`] = `
<div
  class="dropdown-demo"
>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Group Menu 
    </span>
    <svg
      class="arco-icon arco-icon-down"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M39.6 17.443 24.043 33 8.487 17.443"
      />
    </svg>
  </button>
</div>
`;

exports[`renders Dropdown/demo/item-icon.md correctly 1`] = `
<div
  class="dropdown-demo"
>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Click me 
    </span>
    <svg
      class="arco-icon arco-icon-down"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M39.6 17.443 24.043 33 8.487 17.443"
      />
    </svg>
  </button>
</div>
`;

exports[`renders Dropdown/demo/position.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center dropdown-demo"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        BottomLeft
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        BottomCenter
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        BottomRight
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        TopLeft
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        TopRight
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Dropdown/demo/right-click.md correctly 1`] = `
<div
  class="arco-row arco-row-align-center arco-row-justify-center"
  style="width:320px;height:160px;background-color:var(--color-fill-2);color:var(--color-text-1)"
>
  <span>
    Right-click
  </span>
</div>
`;

exports[`renders Dropdown/demo/sub-menu.md correctly 1`] = `
<div
  class="dropdown-demo"
>
  <button
    class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Click
    </span>
    <svg
      class="arco-icon arco-icon-down"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M39.6 17.443 24.043 33 8.487 17.443"
      />
    </svg>
  </button>
</div>
`;

exports[`renders Dropdown/demo/trigger.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center dropdown-demo"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Hover
      </span>
      <svg
        class="arco-icon arco-icon-down"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M39.6 17.443 24.043 33 8.487 17.443"
        />
      </svg>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-text arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Click
      </span>
      <svg
        class="arco-icon arco-icon-down"
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
        width="1em"
      >
        <path
          d="M39.6 17.443 24.043 33 8.487 17.443"
        />
      </svg>
    </button>
  </div>
</div>
`;
